<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/holderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:paddingTop="30dp"
        android:textStyle="bold"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/balanceTextView"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/balanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/transactionMessageTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/holderTextView" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:hint="@string/please_enter_an_amount"
        android:inputType="numberDecimal"
        android:labelFor="@id/balanceTextView"
        android:padding="24dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/depositButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balanceTextView"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/depositButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:padding="20dp"
        android:text="@string/deposit"
        android:textColor="#0936FF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/withdrawButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountEditText" />

    <Button
        android:id="@+id/withdrawButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:padding="20dp"
        android:text="@string/withdraw"
        android:textColor="#E4080A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf= "@id/depositButton"
        />

    <TextView
        android:id="@+id/LifecycleState"
        android:layout_width= "wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf= "parent"
        app:layout_constraintTop_toTopOf= "parent"
        app:layout_constraintBottom_toTopOf= "@id/withdrawButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/transactionMessageTextView"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingTop="30dp"
        android:layout_width= "wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf= "parent"
        app:layout_constraintTop_toTopOf= "@id/balanceTextView"
        app:layout_constraintBottom_toTopOf= "@id/amountEditText"
        app:layout_constraintEnd_toEndOf="parent"/>


    <FrameLayout
        android:id="@+id/flFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="288dp"
        app:layout_constraintTop_toBottomOf="@+id/depositButton"
        tools:layout_editor_absoluteX="26dp" />

</androidx.constraintlayout.widget.ConstraintLayout>